# STAG-LwM2M-Technology-Adapter

./: .gitlab-ci-templates.yml  .gitlab-ci.yml  .hspt-cpp  CHANGELOG  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  ci-variables.yml  conanfile.py  conanfile.txt
cmake/: compiler_settings.cmake  conan_install.cmake
conan/: conanfile.py
conan/test_package/: CMakeLists.txt  conanfile.py  example.cpp  serverConfig.json
conan/test_package/config/: loggerConfig.json  serverConfig.json
conan/test_package/config/model/descriptors/: Electric-Phase.xml
conan/test_package/model/: descriptors.xml
conan/test_package/model/descriptors/: EMeter-Values.xml  Power.xml  Temperature.xml  ipsoSensor.xml  testObj.xml
config/: CoAPSocketConfig.json  loggerConfig.json  serverConfig.json  socketConfig.json
config/model/descriptors/: Current.xml  EIS-Values.xml  EIS.xml  EMeter-Values.xml  Electric-Phase.xml  Humidity.xml  Illuminance.xml  Security.xml  Server.xml  Voltage.xml  deviceObject.xml
docs/manual/: main.md
includes/: LwM2M_Adapter.hpp  LwM2M_RegistryEventHandler.hpp
model/descriptors/: Barometer.xml  EIS.xml  ipsoWakaamaTestObj.xml
sources/: CMakeLists.txt  DeviceEventHandler.cpp  DeviceEventHandler.hpp  LwM2M_Adapter.cpp
sources/Adapter/: CMakeLists.txt  DeviceEventHandler.cpp  DeviceEventHandler.hpp  LwM2M_Adapter.cpp
sources/Example/: CMakeLists.txt  main.cpp
sources/Runner/: CMakeLists.txt  main.cpp
test_package/: CMakeLists.txt  example.cpp
unit_tests/: CMakeLists.txt  test.cc
